--- a/#src/index.html
+++ b/#src/index.html
@@ -5,7 +5,82 @@
 <body>
   @@include('components/_header.html')
   <!-- WRITE CODE HERE -->
-
+<section class="page-section">
+  <div class="container">
+    <div class="top__inner">
+      <h1 class="top__title">
+        Mavic 2 Pro
+      </h1>
+      <img src="images/mavic.png" alt="">
+      <p class="top__text">
+        Квадрокоптер Dji Mavic 2 Pro 
+        с профессиональной камерой Hasselblad
+      </p>
+      <ul class="top__social-list">
+        <li class="top__social-item">
+          <a class="top__social-link" href="#">
+            <img src="images/facebook.svg" alt="">
+          </a>
+        </li>
+        <li class="top__social-item">
+          <a class="top__social-link" href="#">
+            <img src="images/youtube.svg" alt="">
+          </a>
+        </li>
+        <li class="top__social-item">
+          <a class="top__social-link" href="#">
+            <img src="images/instagram.svg" alt="">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="scroll__btn">
+    <a href="#">
+      <img src="images/arrow-down.svg" alt="">
+    </a>
+  </div>
+</section>
+<section class="page-section ">
+  <div class="container"></div>
+  <div class="scroll__btn">
+    <a href="#">
+      <img src="images/arrow-down.svg" alt="">
+    </a>
+  </div>
+</section>
+<section class="page-section">
+  <div class="container"></div>
+  <div class="scroll__btn">
+    <a href="#">
+      <img src="images/arrow-down.svg" alt="">
+    </a>
+  </div>
+</section>
+<section class="page-section">
+  <div class="container"></div>
+  <div class="scroll__btn">
+    <a href="#">
+      <img src="images/arrow-down.svg" alt="">
+    </a>
+  </div>
+</section>
+<section class="page-section">
+  <div class="container"></div>
+  <div class="scroll__btn">
+    <a href="#">
+      <img src="images/arrow-down.svg" alt="">
+    </a>
+  </div>
+</section>
+<section class="page-section">
+  <div class="container"></div>
+  <div class="scroll__btn">
+    <a href="#">
+      <img src="images/arrow-down.svg" alt="">
+    </a>
+  </div>
+</section>
 
   <!-- STOP WRITE CODE -->
   @@include('components/_footer.html')
