added section page-section and top__inner template mavic 2 pro

--- a/#src/index.html
+++ b/#src/index.html
@@ -41,8 +41,13 @@
     </a>
   </div>
 </section>
-<section class="page-section ">
-  <div class="container"></div>
+<section class="page-section products">
+  <div class="container">
+    <h3 class="title products__title"></h3>
+    <div class="products__inner">
+      
+    </div>
+  </div>
   <div class="scroll__btn">
     <a href="#">
       <img src="images/arrow-down.svg" alt="">
@@ -50,7 +55,9 @@
   </div>
 </section>
 <section class="page-section">
-  <div class="container"></div>
+  <div class="container">
+    <h3 class="title"></h3>
+  </div>
   <div class="scroll__btn">
     <a href="#">
       <img src="images/arrow-down.svg" alt="">
@@ -58,7 +65,9 @@
   </div>
 </section>
 <section class="page-section">
-  <div class="container"></div>
+  <div class="container">
+    <h3 class="title"></h3>
+  </div>
   <div class="scroll__btn">
     <a href="#">
       <img src="images/arrow-down.svg" alt="">
@@ -66,7 +75,9 @@
   </div>
 </section>
 <section class="page-section">
-  <div class="container"></div>
+  <div class="container">
+    <h3 class="title"></h3>
+  </div>
   <div class="scroll__btn">
     <a href="#">
       <img src="images/arrow-down.svg" alt="">
@@ -74,7 +85,9 @@
   </div>
 </section>
 <section class="page-section">
-  <div class="container"></div>
+  <div class="container">
+    <h3 class="title"></h3>
+  </div>
   <div class="scroll__btn">
     <a href="#">
       <img src="images/arrow-down.svg" alt="">
