--- a/Mavic/index.html
+++ b/Mavic/index.html
@@ -81,8 +81,13 @@
     </a>
   </div>
 </section>
-<section class="page-section ">
-  <div class="container"></div>
+<section class="page-section products">
+  <div class="container">
+    <h3 class="title products__title"></h3>
+    <div class="products__inner">
+      
+    </div>
+  </div>
   <div class="scroll__btn">
     <a href="#">
       <img src="images/arrow-down.svg" alt="">
@@ -90,7 +95,9 @@
   </div>
 </section>
 <section class="page-section">
-  <div class="container"></div>
+  <div class="container">
+    <h3 class="title"></h3>
+  </div>
   <div class="scroll__btn">
     <a href="#">
       <img src="images/arrow-down.svg" alt="">
@@ -98,7 +105,9 @@
   </div>
 </section>
 <section class="page-section">
-  <div class="container"></div>
+  <div class="container">
+    <h3 class="title"></h3>
+  </div>
   <div class="scroll__btn">
     <a href="#">
       <img src="images/arrow-down.svg" alt="">
@@ -106,7 +115,9 @@
   </div>
 </section>
 <section class="page-section">
-  <div class="container"></div>
+  <div class="container">
+    <h3 class="title"></h3>
+  </div>
   <div class="scroll__btn">
     <a href="#">
       <img src="images/arrow-down.svg" alt="">
@@ -114,7 +125,9 @@
   </div>
 </section>
 <section class="page-section">
-  <div class="container"></div>
+  <div class="container">
+    <h3 class="title"></h3>
+  </div>
   <div class="scroll__btn">
     <a href="#">
       <img src="images/arrow-down.svg" alt="">
