added images on project landing page mavic 2 pro

--- a/#src/index.html
+++ b/#src/index.html
@@ -19,17 +19,17 @@
       <ul class="top__social-list">
         <li class="top__social-item">
           <a class="top__social-link" href="#">
-            <img src="images/facebook.svg" alt="">
+            <img src="images/social/facebook.svg" alt="">
           </a>
         </li>
         <li class="top__social-item">
           <a class="top__social-link" href="#">
-            <img src="images/youtube.svg" alt="">
+            <img src="images/social/youtube.svg" alt="">
           </a>
         </li>
         <li class="top__social-item">
           <a class="top__social-link" href="#">
-            <img src="images/instagram.svg" alt="">
+            <img src="images/social/instagram.svg" alt="">
           </a>
         </li>
       </ul>
@@ -62,22 +62,22 @@
         </p>
         <div class="products__slider">
           <div class="products__slider-item">
-            <img src="images/slider-1.png" alt="" class="products__slider-img">
+            <img src="images/slider-1.jpg" alt="" class="products__slider-img">
           </div>
           <div class="products__slider-item">
-            <img src="images/slider-2.png" alt="" class="products__slider-img">
+            <img src="images/slider-1.jpg" alt="" class="products__slider-img">
           </div>
           <div class="products__slider-item">
-            <img src="images/slider-3.png" alt="" class="products__slider-img">
+            <img src="images/slider-1.jpg" alt="" class="products__slider-img">
           </div>
           <div class="products__slider-item">
-            <img src="images/slider-4.png" alt="" class="products__slider-img">
+            <img src="images/slider-1.jpg" alt="" class="products__slider-img">
           </div>
           <div class="products__slider-item">
-            <img src="images/slider-5.png" alt="" class="products__slider-img">
+            <img src="images/slider-1.jpg" alt="" class="products__slider-img">
           </div>
           <div class="products__slider-item">
-            <img src="images/slider-6.png" alt="" class="products__slider-img">
+            <img src="images/slider-1.jpg" alt="" class="products__slider-img">
           </div>
         </div>
       </div>
@@ -330,17 +330,17 @@
       <div class="contacts__social-list">
         <li class="contacts__social-item">
           <a class="contacts__social-link" href="#">
-            <img src="images/facebook.svg" alt="">
+            <img src="images/social/facebook.svg" alt="">
           </a>
         </li>
         <li class="contacts__social-item">
           <a class="contacts__social-link" href="#">
-            <img src="images/youtube.svg" alt="">
+            <img src="images/social/youtube.svg" alt="">
           </a>
         </li>
         <li class="contacts__social-item">
           <a class="contacts__social-link" href="#">
-            <img src="images/instagram.svg" alt="">
+            <img src="images/social/instagram.svg" alt="">
           </a>
         </li>
       </div>
