--- a/#src/index.html
+++ b/#src/index.html
@@ -104,7 +104,7 @@
           Преимущества
         </h3>
         <div class="benefits__items">
-          <div class="benefits__item">
+          <div class="benefits__item benefits__item-1">
             <div class="benefits__num">1</div>
             <div class="benefits__img">
               <img src="images/benefits-1.jpg" alt="">
@@ -115,7 +115,7 @@
               </h4>
               <p class="benefits__info-text">
                 Mavic 2 унаследовал 6 стандартных режимов интеллектуальной съемки
-                QuickShot:Roket/Dronie/Circle/Helix/Boomerang/Asteroid.
+                QuickShot: Roket/ Dronie/ Circle/ Helix/ Boomerang/ Asteroid.
               </p>
             </div>
           </div>
@@ -134,7 +134,7 @@
               </p>
             </div>
           </div>
-          <div class="benefits__item">
+          <div class="benefits__item benefits__item-3">
             <div class="benefits__num">3</div>
             <div class="benefits__img">
               <img src="images/benefits-3.jpg" alt="">
