--- a/Mavic/index.html
+++ b/Mavic/index.html
@@ -146,7 +146,7 @@
           Преимущества
         </h3>
         <div class="benefits__items">
-          <div class="benefits__item">
+          <div class="benefits__item benefits__item-1">
             <div class="benefits__num">1</div>
             <div class="benefits__img">
               <img src="images/benefits-1.jpg" alt="">
@@ -157,7 +157,7 @@
               </h4>
               <p class="benefits__info-text">
                 Mavic 2 унаследовал 6 стандартных режимов интеллектуальной съемки
-                QuickShot:Roket/Dronie/Circle/Helix/Boomerang/Asteroid.
+                QuickShot: Roket/ Dronie/ Circle/ Helix/ Boomerang/ Asteroid.
               </p>
             </div>
           </div>
@@ -176,7 +176,7 @@
               </p>
             </div>
           </div>
-          <div class="benefits__item">
+          <div class="benefits__item benefits__item-3">
             <div class="benefits__num">3</div>
             <div class="benefits__img">
               <img src="images/benefits-3.jpg" alt="">
@@ -434,7 +434,8 @@
   <footer>
   
 </footer>
-  <script src="js/libs.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/libs.min.js"></script>
 <script src="js/main.min.js"></script>
 </body>
 
