finish page-section products, page-section benefits and added style page-section specification, style svg image (pointer)

--- a/#src/index.html
+++ b/#src/index.html
@@ -104,7 +104,7 @@
           Преимущества
         </h3>
         <div class="benefits__items">
-          <div class="benefits__item benefits__item-1">
+          <div class="benefits__item">
             <div class="benefits__num">1</div>
             <div class="benefits__img">
               <img src="images/benefits-1.jpg" alt="">
@@ -134,7 +134,7 @@
               </p>
             </div>
           </div>
-          <div class="benefits__item benefits__item-3">
+          <div class="benefits__item">
             <div class="benefits__num">3</div>
             <div class="benefits__img">
               <img src="images/benefits-3.jpg" alt="">
@@ -183,7 +183,7 @@
         </h3>
         <div class="specification__inner">
           <div class="specification__item">
-            <div class="specification__box">
+            <div class="specification__box specification__box-1">
               <h4 class="specification__box-title">
                 Dlog-M 10 бит
               </h4>
@@ -192,47 +192,43 @@
                 больше возможностей для цветокоррекции.
               </p>
             </div>
+            <div class="specification__box specification__box-2">
+              <h4 class="specification__box-title">
+                Камера Hasselblad
+              </h4>
+              <p class="specification__box-text">
+                Камера Hasselblad L1D-20С известны эргономичным дизайном и превосходным качеством изображений.
+              </p>
+            </div>
+          </div>
+          <div class="specification__item">
+            <img src="images/mavic.png" alt="">
+          </div>
+          <div class="specification__item specification__item--center">
+            <div class="specification__box specification__box-3">
+              <h4 class="specification__box-title">
+                Матрица CMOS 1
+              </h4>
+              <p class="specification__box-text">
+                Зона активной работы новой 1-дюймовой матрицы CMOS в четыре раза превышает показатели Mavic Pro
+              </p>
+            </div>
             <div class="specification__item">
-              <div class="specification__box">
+              <div class="specification__box specification__box-4">
                 <h4 class="specification__box-title">
-                  Камера Hasselblad
+                  Видео HDR
                 </h4>
                 <p class="specification__box-text">
-                  Камера Hasselblad L1D-20С известны эргономичным дизайном и превосходным качеством изображений.
+                  Благодаря поддержке видео 4K HDR 10 бит, Mavic 2 Pro можно подсоединить к совместимому с HLG 4K ТВ и
+                  просматривать запись в полном цветовом спектре
                 </p>
               </div>
             </div>
-            <div class="specification__item">
-              <img src="images/mavic.png" alt="">
-            </div>
-            <div class="specification__item">
-              <div class="specification__item">
-                <div class="specification__box">
-                  <h4 class="specification__box-title">
-                    Матрица CMOS 1
-                  </h4>
-                  <p class="specification__box-text">
-                    Зона активной работы новой 1-дюймовой матрицы CMOS в четыре раза превышает показатели Mavic Pro
-                  </p>
-                </div>
-                <div class="specification__item">
-                  <div class="specification__box">
-                    <h4 class="specification__box-title">
-                      Видео HDR
-                    </h4>
-                    <p class="specification__box-text">
-                      Благодаря поддержке видео 4K HDR 10 бит, Mavic 2 Pro можно подсоединить к совместимому с HLG 4K ТВ и
-                      просматривать запись в полном цветовом спектре
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="scroll__btn">
-              <a href="#questions">
-                <img src="images/arrow-down.svg" alt="">
-              </a>
-            </div>
+          </div>
+          <div class="scroll__btn">
+            <a href="#questions">
+              <img src="images/arrow-down.svg" alt="">
+            </a>
           </div>
         </div>
       </div>
@@ -251,7 +247,8 @@
               Какие отличия между Mavic 2 Pro и Mavic 2 Zoom?
             </h4>
             <p class="questions__item-text">
-              В Mavic 2 улучшены практически все аспекты: камера, передача видеосигнала, полётное время, скорость, уровень
+              В Mavic 2 улучшены практически все аспекты: камера, передача видеосигнала, полётное время, скорость,
+              уровень
               шума, обнаружение препятствий в нескольких направлениях, интеллектуальные функции и уникальная функция
               Hyperlapse (гиперлапс).
             </p>
@@ -261,7 +258,8 @@
               Чем Mavic 2 лучше Mavic Pro?
             </h4>
             <p class="questions__item-text">
-              В Mavic 2 улучшены практически все аспекты: камера, передача видеосигнала, полётное время, скорость, уровень
+              В Mavic 2 улучшены практически все аспекты: камера, передача видеосигнала, полётное время, скорость,
+              уровень
               шума, обнаружение препятствий в нескольких направлениях, интеллектуальные функции и уникальная функция
               Hyperlapse (гиперлапс).
             </p>
@@ -271,7 +269,8 @@
               Можно ли подключить Mavic 2 к очкам DJI Goggles?
             </h4>
             <p class="questions__item-text">
-              В Mavic 2 улучшены практически все аспекты: камера, передача видеосигнала, полётное время, скорость, уровень
+              В Mavic 2 улучшены практически все аспекты: камера, передача видеосигнала, полётное время, скорость,
+              уровень
               шума, обнаружение препятствий в нескольких направлениях, интеллектуальные функции и уникальная функция
               Hyperlapse (гиперлапс).
             </p>
@@ -281,7 +280,8 @@
               Является ли Mavic 2 водонепроницаемым？
             </h4>
             <p class="questions__item-text">
-              В Mavic 2 улучшены практически все аспекты: камера, передача видеосигнала, полётное время, скорость, уровень
+              В Mavic 2 улучшены практически все аспекты: камера, передача видеосигнала, полётное время, скорость,
+              уровень
               шума, обнаружение препятствий в нескольких направлениях, интеллектуальные функции и уникальная функция
               Hyperlapse (гиперлапс).
             </p>
@@ -386,7 +386,7 @@
     </div>
   </footer>
 
- 
+
 
   <!-- STOP WRITE CODE -->
   @@include('components/_footer.html')
