added style page-section questions, contacts and finished these sections

--- a/#src/index.html
+++ b/#src/index.html
@@ -253,7 +253,7 @@
               Hyperlapse (гиперлапс).
             </p>
           </div>
-          <div class="questions__item">
+          <div class="questions__item questions__item--active">
             <h4 class="questions__item-title">
               Чем Mavic 2 лучше Mavic Pro?
             </h4>
@@ -374,17 +374,18 @@
             </li>
           </div>
         </div>
+        <footer class="footer">
+          <div class="container">
+            <p class="footer__copy">
+              © DJI, 2020
+            </p>
+          </div>
+        </footer>
       </div>
     </div>
   </section>
 
-  <footer class="footer">
-    <div class="container">
-      <p class="footer__copy">
-        © DJI, 2020
-      </p>
-    </div>
-  </footer>
+  
 
 
 
