--- a/Mavic/index.html
+++ b/Mavic/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Document</title>
@@ -295,7 +295,7 @@
               Hyperlapse (гиперлапс).
             </p>
           </div>
-          <div class="questions__item">
+          <div class="questions__item questions__item--active">
             <h4 class="questions__item-title">
               Чем Mavic 2 лучше Mavic Pro?
             </h4>
@@ -416,17 +416,18 @@
             </li>
           </div>
         </div>
+        <footer class="footer">
+          <div class="container">
+            <p class="footer__copy">
+              © DJI, 2020
+            </p>
+          </div>
+        </footer>
       </div>
     </div>
   </section>
 
-  <footer class="footer">
-    <div class="container">
-      <p class="footer__copy">
-        © DJI, 2020
-      </p>
-    </div>
-  </footer>
+  
 
 
 
