added animation scroll (fullpage.js)

--- a/#src/index.html
+++ b/#src/index.html
@@ -5,6 +5,8 @@
 <body>
   @@include('components/_header.html')
   <!-- WRITE CODE HERE -->
+<main id="fullpage">
+
   <section class="page-section top">
     <div class="page-section__wrapper top__wrapper">
       <div class="container">
@@ -384,7 +386,7 @@
       </div>
     </div>
   </section>
-
+</main>
   
 
 
