--- a/Mavic/index.html
+++ b/Mavic/index.html
@@ -47,6 +47,8 @@
     </div>
 </header>
   <!-- WRITE CODE HERE -->
+<main id="fullpage">
+
   <section class="page-section top">
     <div class="page-section__wrapper top__wrapper">
       <div class="container">
@@ -426,7 +428,7 @@
       </div>
     </div>
   </section>
-
+</main>
   
 
 
