--- a/#src/index.html
+++ b/#src/index.html
@@ -7,7 +7,7 @@
   <!-- WRITE CODE HERE -->
 <main id="fullpage">
 
-  <section class="page-section top">
+  <section id="home" class="page-section top">
     <div class="page-section__wrapper top__wrapper">
       <div class="container">
         <div class="top__inner">
