made an adaptive top section. Added smooth scrolling fullpage.js

--- a/#src/index.html
+++ b/#src/index.html
@@ -7,7 +7,7 @@
   <!-- WRITE CODE HERE -->
 <main id="fullpage">
 
-  <section id="home" class="page-section top">
+  <section data-anchor="top" class="page-section top">
     <div class="page-section__wrapper top__wrapper">
       <div class="container">
         <div class="top__inner">
@@ -46,7 +46,7 @@
     </div>
   </section>
 
-  <section id="products" class="page-section products">
+  <section data-anchor="products" class="page-section products">
     <div class="page-section__wrapper">
       <div class="container">
         <h3 class="title products__title">
@@ -99,7 +99,7 @@
     </div>
   </section>
 
-  <section id="benefits" class="page-section benefits">
+  <section data-anchor="benefits" class="page-section benefits">
     <div class="page-section__wrapper">
       <div class="container">
         <h3 class="title">
@@ -177,7 +177,7 @@
     </div>
   </section>
 
-  <section id="specification" class="page-section specification">
+  <section data-anchor="specification" class="page-section specification">
     <div class="page-section__wrapper">
       <div class="container">
         <h3 class="title">
@@ -237,7 +237,7 @@
     </div>
   </section>
 
-  <section id="questions" class="page-section questions">
+  <section data-anchor="questions" class="page-section questions">
     <div class="page-section__wrapper">
       <div class="container">
         <h3 class="title">
@@ -298,7 +298,7 @@
     </div>
   </section>
 
-  <section id="contacts" class="page-section contacts">
+  <section data-anchor="contacts" class="page-section contacts">
     <div class="page-section__wrapper">
       <div class="container">
         <h3 class="title">
