--- a/Mavic/index.html
+++ b/Mavic/index.html
@@ -13,31 +13,33 @@
 <body>
   <header class="header">
     <div class="container">
-        <div class="header__inner">
-            <a class="logo" href="#home">
-                <picture class="logo__img">
-                    <source srcset="images/logo-mobile.png" media="(max-width: 600px)">
-                    <img src="images/logo.png" alt="">
-                </picture>
-            </a>
+        <div id="header__nav" class="header__inner">
+            <div data-menuanchor="top">
+                <a class="logo" href="#top">
+                    <picture class="logo__img">
+                        <source srcset="images/logo-mobile.png" media="(max-width: 600px)">
+                        <img src="images/logo.png" alt="">
+                    </picture>
+                </a>
+            </div>
             <nav class="menu">
                 <button class="menu__btn">
                     <span class="menu__btn-line"></span>
                 </button>
                 <ul class="menu__list">
-                    <li class="menu__list-item">
+                    <li class="menu__list-item" data-menuanchor="products">
                         <a class="menu__list-link" href="#products">О ДРОНЕ</a>
                     </li>
-                    <li class="menu__list-item">
+                    <li class="menu__list-item" data-menuanchor="benefits">
                         <a class="menu__list-link" href="#benefits">ПРЕИМУЩЕСТВА</a>
                     </li>
-                    <li class="menu__list-item">
+                    <li class="menu__list-item" data-menuanchor="specification">
                         <a class="menu__list-link" href="#specification">ХАРАКТЕРИСТИКИ</a>
                     </li>
-                    <li class="menu__list-item">
+                    <li class="menu__list-item" data-menuanchor="questions">
                         <a class="menu__list-link" href="#questions">ВОПРОСЫ</a>
                     </li>
-                    <li class="menu__list-item">
+                    <li class="menu__list-item" data-menuanchor="contacts">
                         <a class="menu__list-link" href="#contacts">КОНТАКТЫ</a>
                     </li>
                     <li class="menu__list-phone">
@@ -55,7 +57,7 @@
   <!-- WRITE CODE HERE -->
 <main id="fullpage">
 
-  <section id="home" class="page-section top">
+  <section data-anchor="top" class="page-section top">
     <div class="page-section__wrapper top__wrapper">
       <div class="container">
         <div class="top__inner">
@@ -94,7 +96,7 @@
     </div>
   </section>
 
-  <section id="products" class="page-section products">
+  <section data-anchor="products" class="page-section products">
     <div class="page-section__wrapper">
       <div class="container">
         <h3 class="title products__title">
@@ -147,7 +149,7 @@
     </div>
   </section>
 
-  <section id="benefits" class="page-section benefits">
+  <section data-anchor="benefits" class="page-section benefits">
     <div class="page-section__wrapper">
       <div class="container">
         <h3 class="title">
@@ -225,7 +227,7 @@
     </div>
   </section>
 
-  <section id="specification" class="page-section specification">
+  <section data-anchor="specification" class="page-section specification">
     <div class="page-section__wrapper">
       <div class="container">
         <h3 class="title">
@@ -285,7 +287,7 @@
     </div>
   </section>
 
-  <section id="questions" class="page-section questions">
+  <section data-anchor="questions" class="page-section questions">
     <div class="page-section__wrapper">
       <div class="container">
         <h3 class="title">
@@ -346,7 +348,7 @@
     </div>
   </section>
 
-  <section id="contacts" class="page-section contacts">
+  <section data-anchor="contacts" class="page-section contacts">
     <div class="page-section__wrapper">
       <div class="container">
         <h3 class="title">
